[Frontend] Tuned to add pagination display for listing and fixed API calling function to pass page number for pagination, minor tuning for button display in mobile mode, add a default value of today date for applied date in add job application page, fixed the issue where page content overflow over sidebar in mobile view.

--- a/frontend/src/assets/css/standard.css
+++ b/frontend/src/assets/css/standard.css
@@ -618,8 +618,9 @@ button.header-btn.sidebar-btn:focus {
 	top: 50%;
 	width: 100%;
 	height: 100%;
-	display: blocked;
+	display: block;
 	transition: 0.2s ease-in;
+	z-index: 1000;
 }
 
 .sidebar-container.closed-sidebar {
